docs/versioned_docs/version-0.9.x/06-api-reference/index.md
# react-native-executorch

## Hooks

- [useClassification](functions/useClassification.md)
- [useExecutorchModule](functions/useExecutorchModule.md)
- [useImageEmbeddings](functions/useImageEmbeddings.md)
- [useInstanceSegmentation](functions/useInstanceSegmentation.md)
- [useLLM](functions/useLLM.md)
- [useObjectDetection](functions/useObjectDetection.md)
- [useOCR](functions/useOCR.md)
- [usePoseEstimation](functions/usePoseEstimation.md)
- [usePrivacyFilter](functions/usePrivacyFilter.md)
- [useSemanticSegmentation](functions/useSemanticSegmentation.md)
- [useSpeechToText](functions/useSpeechToText.md)
- [useStyleTransfer](functions/useStyleTransfer.md)
- [useTextEmbeddings](functions/useTextEmbeddings.md)
- [useTextToImage](functions/useTextToImage.md)
- [useTextToSpeech](functions/useTextToSpeech.md)
- [useTokenizer](functions/useTokenizer.md)
- [useVAD](functions/useVAD.md)
- [useVerticalOCR](functions/useVerticalOCR.md)

## Models - Classification

- [EFFICIENTNET_V2_S](variables/EFFICIENTNET_V2_S.md)
- [EFFICIENTNET_V2_S_QUANTIZED](variables/EFFICIENTNET_V2_S_QUANTIZED.md)

## Models - Image Embeddings

- [CLIP_VIT_BASE_PATCH32_IMAGE](variables/CLIP_VIT_BASE_PATCH32_IMAGE.md)
- [CLIP_VIT_BASE_PATCH32_IMAGE_QUANTIZED](variables/CLIP_VIT_BASE_PATCH32_IMAGE_QUANTIZED.md)

## Models - Image Generation

- [BK_SDM_TINY_VPRED_256](variables/BK_SDM_TINY_VPRED_256.md)
- [BK_SDM_TINY_VPRED_512](variables/BK_SDM_TINY_VPRED_512.md)

## Models - Instance Segmentation

- [FASTSAM_S](variables/FASTSAM_S.md)
- [FASTSAM_X](variables/FASTSAM_X.md)
- [RF_DETR_NANO_SEG](variables/RF_DETR_NANO_SEG.md)
- [YOLO26L_SEG](variables/YOLO26L_SEG.md)
- [YOLO26M_SEG](variables/YOLO26M_SEG.md)
- [YOLO26N_SEG](variables/YOLO26N_SEG.md)
- [YOLO26S_SEG](variables/YOLO26S_SEG.md)
- [YOLO26X_SEG](variables/YOLO26X_SEG.md)

## Models - LLM

- [BIELIK_V3_0_1_5B](variables/BIELIK_V3_0_1_5B.md)
- [BIELIK_V3_0_1_5B_QUANTIZED](variables/BIELIK_V3_0_1_5B_QUANTIZED.md)
- [HAMMER2_1_0_5B](variables/HAMMER2_1_0_5B.md)
- [HAMMER2_1_0_5B_QUANTIZED](variables/HAMMER2_1_0_5B_QUANTIZED.md)
- [HAMMER2_1_1_5B](variables/HAMMER2_1_1_5B.md)
- [HAMMER2_1_1_5B_QUANTIZED](variables/HAMMER2_1_1_5B_QUANTIZED.md)
- [HAMMER2_1_3B](variables/HAMMER2_1_3B.md)
- [HAMMER2_1_3B_QUANTIZED](variables/HAMMER2_1_3B_QUANTIZED.md)
- [LFM2_5_1_2B_INSTRUCT](variables/LFM2_5_1_2B_INSTRUCT.md)
- [LFM2_5_1_2B_INSTRUCT_QUANTIZED](variables/LFM2_5_1_2B_INSTRUCT_QUANTIZED.md)
- [LFM2_5_350M](variables/LFM2_5_350M.md)
- [LFM2_5_350M_QUANTIZED](variables/LFM2_5_350M_QUANTIZED.md)
- [LLAMA3_2_1B](variables/LLAMA3_2_1B.md)
- [~~LLAMA3_2_1B_QLORA~~](variables/LLAMA3_2_1B_QLORA.md)
- [LLAMA3_2_1B_SPINQUANT](variables/LLAMA3_2_1B_SPINQUANT.md)
- [LLAMA3_2_3B](variables/LLAMA3_2_3B.md)
- [~~LLAMA3_2_3B_QLORA~~](variables/LLAMA3_2_3B_QLORA.md)
- [LLAMA3_2_3B_SPINQUANT](variables/LLAMA3_2_3B_SPINQUANT.md)
- [PHI_4_MINI_4B](variables/PHI_4_MINI_4B.md)
- [PHI_4_MINI_4B_QUANTIZED](variables/PHI_4_MINI_4B_QUANTIZED.md)
- [QWEN2_5_0_5B](variables/QWEN2_5_0_5B.md)
- [QWEN2_5_0_5B_QUANTIZED](variables/QWEN2_5_0_5B_QUANTIZED.md)
- [QWEN2_5_1_5B](variables/QWEN2_5_1_5B.md)
- [QWEN2_5_1_5B_QUANTIZED](variables/QWEN2_5_1_5B_QUANTIZED.md)
- [QWEN2_5_3B](variables/QWEN2_5_3B.md)
- [QWEN2_5_3B_QUANTIZED](variables/QWEN2_5_3B_QUANTIZED.md)
- [QWEN3_0_6B](variables/QWEN3_0_6B.md)
- [QWEN3_0_6B_QUANTIZED](variables/QWEN3_0_6B_QUANTIZED.md)
- [QWEN3_1_7B](variables/QWEN3_1_7B.md)
- [QWEN3_1_7B_QUANTIZED](variables/QWEN3_1_7B_QUANTIZED.md)
- [QWEN3_4B](variables/QWEN3_4B.md)
- [QWEN3_4B_QUANTIZED](variables/QWEN3_4B_QUANTIZED.md)
- [QWEN3_5_0_8B_QUANTIZED](variables/QWEN3_5_0_8B_QUANTIZED.md)
- [QWEN3_5_2B_QUANTIZED](variables/QWEN3_5_2B_QUANTIZED.md)
- [SMOLLM2_1_1_7B](variables/SMOLLM2_1_1_7B.md)
- [SMOLLM2_1_1_7B_QUANTIZED](variables/SMOLLM2_1_1_7B_QUANTIZED.md)
- [SMOLLM2_1_135M](variables/SMOLLM2_1_135M.md)
- [SMOLLM2_1_135M_QUANTIZED](variables/SMOLLM2_1_135M_QUANTIZED.md)
- [SMOLLM2_1_360M](variables/SMOLLM2_1_360M.md)
- [SMOLLM2_1_360M_QUANTIZED](variables/SMOLLM2_1_360M_QUANTIZED.md)

## Models - Object Detection

- [RF_DETR_NANO](variables/RF_DETR_NANO.md)
- [SSDLITE_320_MOBILENET_V3_LARGE](variables/SSDLITE_320_MOBILENET_V3_LARGE.md)
- [YOLO26L](variables/YOLO26L.md)
- [YOLO26M](variables/YOLO26M.md)
- [YOLO26N](variables/YOLO26N.md)
- [YOLO26S](variables/YOLO26S.md)
- [YOLO26X](variables/YOLO26X.md)

## Models - Pose Estimation

- [YOLO26N_POSE](variables/YOLO26N_POSE.md)

## Models - Privacy Filter

- [PRIVACY_FILTER_NEMOTRON](variables/PRIVACY_FILTER_NEMOTRON.md)
- [PRIVACY_FILTER_OPENAI](variables/PRIVACY_FILTER_OPENAI.md)

## Models - Semantic Segmentation

- [DEEPLAB_V3_MOBILENET_V3_LARGE](variables/DEEPLAB_V3_MOBILENET_V3_LARGE.md)
- [DEEPLAB_V3_MOBILENET_V3_LARGE_QUANTIZED](variables/DEEPLAB_V3_MOBILENET_V3_LARGE_QUANTIZED.md)
- [DEEPLAB_V3_RESNET101](variables/DEEPLAB_V3_RESNET101.md)
- [DEEPLAB_V3_RESNET101_QUANTIZED](variables/DEEPLAB_V3_RESNET101_QUANTIZED.md)
- [DEEPLAB_V3_RESNET50](variables/DEEPLAB_V3_RESNET50.md)
- [DEEPLAB_V3_RESNET50_QUANTIZED](variables/DEEPLAB_V3_RESNET50_QUANTIZED.md)
- [FCN_RESNET101](variables/FCN_RESNET101.md)
- [FCN_RESNET101_QUANTIZED](variables/FCN_RESNET101_QUANTIZED.md)
- [FCN_RESNET50](variables/FCN_RESNET50.md)
- [FCN_RESNET50_QUANTIZED](variables/FCN_RESNET50_QUANTIZED.md)
- [LRASPP_MOBILENET_V3_LARGE](variables/LRASPP_MOBILENET_V3_LARGE.md)
- [LRASPP_MOBILENET_V3_LARGE_QUANTIZED](variables/LRASPP_MOBILENET_V3_LARGE_QUANTIZED.md)
- [SELFIE_SEGMENTATION](variables/SELFIE_SEGMENTATION.md)

## Models - Speech To Text

- [WHISPER_BASE](variables/WHISPER_BASE.md)
- [WHISPER_BASE_EN](variables/WHISPER_BASE_EN.md)
- [WHISPER_SMALL](variables/WHISPER_SMALL.md)
- [WHISPER_SMALL_EN](variables/WHISPER_SMALL_EN.md)
- [WHISPER_TINY](variables/WHISPER_TINY.md)
- [WHISPER_TINY_EN](variables/WHISPER_TINY_EN.md)

## Models - Style Transfer

- [STYLE_TRANSFER_CANDY](variables/STYLE_TRANSFER_CANDY.md)
- [STYLE_TRANSFER_CANDY_QUANTIZED](variables/STYLE_TRANSFER_CANDY_QUANTIZED.md)
- [STYLE_TRANSFER_MOSAIC](variables/STYLE_TRANSFER_MOSAIC.md)
- [STYLE_TRANSFER_MOSAIC_QUANTIZED](variables/STYLE_TRANSFER_MOSAIC_QUANTIZED.md)
- [STYLE_TRANSFER_RAIN_PRINCESS](variables/STYLE_TRANSFER_RAIN_PRINCESS.md)
- [STYLE_TRANSFER_RAIN_PRINCESS_QUANTIZED](variables/STYLE_TRANSFER_RAIN_PRINCESS_QUANTIZED.md)
- [STYLE_TRANSFER_UDNIE](variables/STYLE_TRANSFER_UDNIE.md)
- [STYLE_TRANSFER_UDNIE_QUANTIZED](variables/STYLE_TRANSFER_UDNIE_QUANTIZED.md)

## Models - Text Embeddings

- [ALL_MINILM_L6_V2](variables/ALL_MINILM_L6_V2.md)
- [ALL_MPNET_BASE_V2](variables/ALL_MPNET_BASE_V2.md)
- [CLIP_VIT_BASE_PATCH32_TEXT](variables/CLIP_VIT_BASE_PATCH32_TEXT.md)
- [~~DISTILUSE_BASE_MULTILINGUAL_CASED_V2_8DA4W~~](variables/DISTILUSE_BASE_MULTILINGUAL_CASED_V2_8DA4W.md)
- [MULTI_QA_MINILM_L6_COS_V1](variables/MULTI_QA_MINILM_L6_COS_V1.md)
- [MULTI_QA_MPNET_BASE_DOT_V1](variables/MULTI_QA_MPNET_BASE_DOT_V1.md)
- [PARAPHRASE_MULTILINGUAL_MINILM_L12_V2_QUANTIZED](variables/PARAPHRASE_MULTILINGUAL_MINILM_L12_V2_QUANTIZED.md)

## Models - Text to Speech

- [KOKORO_GERMAN](variables/KOKORO_GERMAN.md)
- [KOKORO_POLISH](variables/KOKORO_POLISH.md)
- [KOKORO_STANDARD](variables/KOKORO_STANDARD.md)

## Models - VLM

- [LFM2_5_VL_1_6B_QUANTIZED](variables/LFM2_5_VL_1_6B_QUANTIZED.md)
- [LFM2_5_VL_450M_QUANTIZED](variables/LFM2_5_VL_450M_QUANTIZED.md)
- [~~LFM2_VL_1_6B_QUANTIZED~~](variables/LFM2_VL_1_6B_QUANTIZED.md)
- [~~LFM2_VL_450M_QUANTIZED~~](variables/LFM2_VL_450M_QUANTIZED.md)

## Models - Voice Activity Detection

- [FSMN_VAD](variables/FSMN_VAD.md)

## OCR Supported Alphabets

- [OCR_ABAZA](variables/OCR_ABAZA.md)
- [OCR_ADYGHE](variables/OCR_ADYGHE.md)
- [OCR_AFRIKAANS](variables/OCR_AFRIKAANS.md)
- [OCR_ALBANIAN](variables/OCR_ALBANIAN.md)
- [OCR_AVAR](variables/OCR_AVAR.md)
- [OCR_AZERBAIJANI](variables/OCR_AZERBAIJANI.md)
- [OCR_BELARUSIAN](variables/OCR_BELARUSIAN.md)
- [OCR_BOSNIAN](variables/OCR_BOSNIAN.md)
- [OCR_BULGARIAN](variables/OCR_BULGARIAN.md)
- [OCR_CHECHEN](variables/OCR_CHECHEN.md)
- [OCR_CROATIAN](variables/OCR_CROATIAN.md)
- [OCR_CZECH](variables/OCR_CZECH.md)
- [OCR_DANISH](variables/OCR_DANISH.md)
- [OCR_DARGWA](variables/OCR_DARGWA.md)
- [OCR_DUTCH](variables/OCR_DUTCH.md)
- [OCR_ENGLISH](variables/OCR_ENGLISH.md)
- [OCR_ESTONIAN](variables/OCR_ESTONIAN.md)
- [OCR_FRENCH](variables/OCR_FRENCH.md)
- [OCR_GERMAN](variables/OCR_GERMAN.md)
- [OCR_HUNGARIAN](variables/OCR_HUNGARIAN.md)
- [OCR_ICELANDIC](variables/OCR_ICELANDIC.md)
- [OCR_INDONESIAN](variables/OCR_INDONESIAN.md)
- [OCR_INGUSH](variables/OCR_INGUSH.md)
- [OCR_IRISH](variables/OCR_IRISH.md)
- [OCR_ITALIAN](variables/OCR_ITALIAN.md)
- [OCR_JAPANESE](variables/OCR_JAPANESE.md)
- [OCR_KANNADA](variables/OCR_KANNADA.md)
- [OCR_KARBADIAN](variables/OCR_KARBADIAN.md)
- [OCR_KOREAN](variables/OCR_KOREAN.md)
- [OCR_KURDISH](variables/OCR_KURDISH.md)
- [OCR_LAK](variables/OCR_LAK.md)
- [OCR_LATIN](variables/OCR_LATIN.md)
- [OCR_LATVIAN](variables/OCR_LATVIAN.md)
- [OCR_LEZGHIAN](variables/OCR_LEZGHIAN.md)
- [OCR_LITHUANIAN](variables/OCR_LITHUANIAN.md)
- [OCR_MALAY](variables/OCR_MALAY.md)
- [OCR_MALTESE](variables/OCR_MALTESE.md)
- [OCR_MAORI](variables/OCR_MAORI.md)
- [OCR_MONGOLIAN](variables/OCR_MONGOLIAN.md)
- [OCR_NORWEGIAN](variables/OCR_NORWEGIAN.md)
- [OCR_OCCITAN](variables/OCR_OCCITAN.md)
- [OCR_PALI](variables/OCR_PALI.md)
- [OCR_POLISH](variables/OCR_POLISH.md)
- [OCR_PORTUGUESE](variables/OCR_PORTUGUESE.md)
- [OCR_ROMANIAN](variables/OCR_ROMANIAN.md)
- [OCR_RUSSIAN](variables/OCR_RUSSIAN.md)
- [OCR_SERBIAN_CYRILLIC](variables/OCR_SERBIAN_CYRILLIC.md)
- [OCR_SERBIAN_LATIN](variables/OCR_SERBIAN_LATIN.md)
- [OCR_SIMPLIFIED_CHINESE](variables/OCR_SIMPLIFIED_CHINESE.md)
- [OCR_SLOVAK](variables/OCR_SLOVAK.md)
- [OCR_SLOVENIAN](variables/OCR_SLOVENIAN.md)
- [OCR_SPANISH](variables/OCR_SPANISH.md)
- [OCR_SWAHILI](variables/OCR_SWAHILI.md)
- [OCR_SWEDISH](variables/OCR_SWEDISH.md)
- [OCR_TABASSARAN](variables/OCR_TABASSARAN.md)
- [OCR_TAGALOG](variables/OCR_TAGALOG.md)
- [OCR_TAJIK](variables/OCR_TAJIK.md)
- [OCR_TELUGU](variables/OCR_TELUGU.md)
- [OCR_TURKISH](variables/OCR_TURKISH.md)
- [OCR_UKRAINIAN](variables/OCR_UKRAINIAN.md)
- [OCR_UZBEK](variables/OCR_UZBEK.md)
- [OCR_VIETNAMESE](variables/OCR_VIETNAMESE.md)
- [OCR_WELSH](variables/OCR_WELSH.md)

## Other

- [RnExecutorchErrorCode](enumerations/RnExecutorchErrorCode.md)
- [BaseResourceFetcherClass](classes/BaseResourceFetcherClass.md)
- [Logger](classes/Logger.md)
- [RnExecutorchError](classes/RnExecutorchError.md)
- [Frame](interfaces/Frame.md)
- [NativeSegmentedInstance](interfaces/NativeSegmentedInstance.md)
- [DISTILUSE_BASE_MULTILINGUAL_CASED_V2_8DA4W_MODEL](variables/DISTILUSE_BASE_MULTILINGUAL_CASED_V2_8DA4W_MODEL.md)
- [DISTILUSE_BASE_MULTILINGUAL_CASED_V2_TOKENIZER](variables/DISTILUSE_BASE_MULTILINGUAL_CASED_V2_TOKENIZER.md)
- [EFFICIENTNET_V2_S_COREML_FP16_MODEL](variables/EFFICIENTNET_V2_S_COREML_FP16_MODEL.md)
- [EFFICIENTNET_V2_S_COREML_FP32_MODEL](variables/EFFICIENTNET_V2_S_COREML_FP32_MODEL.md)
- [EFFICIENTNET_V2_S_XNNPACK_FP32_MODEL](variables/EFFICIENTNET_V2_S_XNNPACK_FP32_MODEL.md)
- [EFFICIENTNET_V2_S_XNNPACK_INT8_MODEL](variables/EFFICIENTNET_V2_S_XNNPACK_INT8_MODEL.md)
- [FASTSAM_S_COREML_FP16_MODEL](variables/FASTSAM_S_COREML_FP16_MODEL.md)
- [FASTSAM_S_XNNPACK_FP32_MODEL](variables/FASTSAM_S_XNNPACK_FP32_MODEL.md)
- [FASTSAM_X_COREML_FP16_MODEL](variables/FASTSAM_X_COREML_FP16_MODEL.md)
- [FASTSAM_X_XNNPACK_FP32_MODEL](variables/FASTSAM_X_XNNPACK_FP32_MODEL.md)
- [IMAGENET1K_MEAN](variables/IMAGENET1K_MEAN.md)
- [IMAGENET1K_STD](variables/IMAGENET1K_STD.md)
- [RF_DETR_NANO_COREML_INT8_MODEL](variables/RF_DETR_NANO_COREML_INT8_MODEL.md)
- [RF_DETR_NANO_SEG_COREML_INT8_MODEL](variables/RF_DETR_NANO_SEG_COREML_INT8_MODEL.md)
- [RF_DETR_NANO_SEG_XNNPACK_FP32_MODEL](variables/RF_DETR_NANO_SEG_XNNPACK_FP32_MODEL.md)
- [RF_DETR_NANO_XNNPACK_FP32_MODEL](variables/RF_DETR_NANO_XNNPACK_FP32_MODEL.md)
- [SSDLITE_320_MOBILENET_V3_LARGE_COREML_FP16_MODEL](variables/SSDLITE_320_MOBILENET_V3_LARGE_COREML_FP16_MODEL.md)
- [SSDLITE_320_MOBILENET_V3_LARGE_XNNPACK_FP32_MODEL](variables/SSDLITE_320_MOBILENET_V3_LARGE_XNNPACK_FP32_MODEL.md)
- [WHISPER_BASE_EN_MODEL_COREML](variables/WHISPER_BASE_EN_MODEL_COREML.md)
- [WHISPER_BASE_EN_MODEL_XNNPACK](variables/WHISPER_BASE_EN_MODEL_XNNPACK.md)
- [WHISPER_BASE_EN_TOKENIZER](variables/WHISPER_BASE_EN_TOKENIZER.md)
- [WHISPER_BASE_MODEL_COREML](variables/WHISPER_BASE_MODEL_COREML.md)
- [WHISPER_BASE_MODEL_XNNPACK](variables/WHISPER_BASE_MODEL_XNNPACK.md)
- [WHISPER_BASE_TOKENIZER](variables/WHISPER_BASE_TOKENIZER.md)
- [WHISPER_SMALL_EN_MODEL_COREML](variables/WHISPER_SMALL_EN_MODEL_COREML.md)
- [WHISPER_SMALL_EN_MODEL_XNNPACK](variables/WHISPER_SMALL_EN_MODEL_XNNPACK.md)
- [WHISPER_SMALL_EN_TOKENIZER](variables/WHISPER_SMALL_EN_TOKENIZER.md)
- [WHISPER_SMALL_MODEL_COREML](variables/WHISPER_SMALL_MODEL_COREML.md)
- [WHISPER_SMALL_MODEL_XNNPACK](variables/WHISPER_SMALL_MODEL_XNNPACK.md)
- [WHISPER_SMALL_TOKENIZER](variables/WHISPER_SMALL_TOKENIZER.md)
- [WHISPER_TINY_EN_MODEL_COREML](variables/WHISPER_TINY_EN_MODEL_COREML.md)
- [WHISPER_TINY_EN_MODEL_XNNPACK](variables/WHISPER_TINY_EN_MODEL_XNNPACK.md)
- [WHISPER_TINY_EN_TOKENIZER](variables/WHISPER_TINY_EN_TOKENIZER.md)
- [WHISPER_TINY_MODEL_COREML](variables/WHISPER_TINY_MODEL_COREML.md)
- [WHISPER_TINY_MODEL_XNNPACK](variables/WHISPER_TINY_MODEL_XNNPACK.md)
- [WHISPER_TINY_TOKENIZER](variables/WHISPER_TINY_TOKENIZER.md)
- [getModelNameForUrl](functions/getModelNameForUrl.md)
- [selectByBox](functions/selectByBox.md)
- [selectByPoint](functions/selectByPoint.md)
- [selectByText](functions/selectByText.md)
- [styleTransferUrls](functions/styleTransferUrls.md)

## TTS Supported Voices

- [KOKORO_AMERICAN_ENGLISH_FEMALE_HEART](variables/KOKORO_AMERICAN_ENGLISH_FEMALE_HEART.md)
- [KOKORO_AMERICAN_ENGLISH_FEMALE_RIVER](variables/KOKORO_AMERICAN_ENGLISH_FEMALE_RIVER.md)
- [KOKORO_AMERICAN_ENGLISH_FEMALE_SARAH](variables/KOKORO_AMERICAN_ENGLISH_FEMALE_SARAH.md)
- [KOKORO_AMERICAN_ENGLISH_MALE_ADAM](variables/KOKORO_AMERICAN_ENGLISH_MALE_ADAM.md)
- [KOKORO_AMERICAN_ENGLISH_MALE_MICHAEL](variables/KOKORO_AMERICAN_ENGLISH_MALE_MICHAEL.md)
- [KOKORO_AMERICAN_ENGLISH_MALE_SANTA](variables/KOKORO_AMERICAN_ENGLISH_MALE_SANTA.md)
- [KOKORO_BRITISH_ENGLISH_FEMALE_EMMA](variables/KOKORO_BRITISH_ENGLISH_FEMALE_EMMA.md)
- [KOKORO_BRITISH_ENGLISH_MALE_DANIEL](variables/KOKORO_BRITISH_ENGLISH_MALE_DANIEL.md)
- [KOKORO_FRENCH_FEMALE_SIWIS](variables/KOKORO_FRENCH_FEMALE_SIWIS.md)
- [KOKORO_GERMAN_FEMALE_ANNA](variables/KOKORO_GERMAN_FEMALE_ANNA.md)
- [KOKORO_HINDI_FEMALE_ALPHA](variables/KOKORO_HINDI_FEMALE_ALPHA.md)
- [KOKORO_HINDI_MALE_OMEGA](variables/KOKORO_HINDI_MALE_OMEGA.md)
- [KOKORO_HINDI_MALE_PSI](variables/KOKORO_HINDI_MALE_PSI.md)
- [KOKORO_ITALIAN_FEMALE_SARA](variables/KOKORO_ITALIAN_FEMALE_SARA.md)
- [KOKORO_ITALIAN_MALE_NICOLA](variables/KOKORO_ITALIAN_MALE_NICOLA.md)
- [KOKORO_POLISH_MALE_MATEUSZ](variables/KOKORO_POLISH_MALE_MATEUSZ.md)
- [KOKORO_PORTUGUESE_FEMALE_DORA](variables/KOKORO_PORTUGUESE_FEMALE_DORA.md)
- [KOKORO_PORTUGUESE_MALE_SANTA](variables/KOKORO_PORTUGUESE_MALE_SANTA.md)
- [KOKORO_SPANISH_FEMALE_DORA](variables/KOKORO_SPANISH_FEMALE_DORA.md)
- [KOKORO_SPANISH_MALE_ALEX](variables/KOKORO_SPANISH_MALE_ALEX.md)

## Types

- [CocoKeypoint](enumerations/CocoKeypoint.md)
- [CocoLabel](enumerations/CocoLabel.md)
- [CocoLabelYolo](enumerations/CocoLabelYolo.md)
- [DeeplabLabel](enumerations/DeeplabLabel.md)
- [DownloadStatus](enumerations/DownloadStatus.md)
- [FastSAMLabel](enumerations/FastSAMLabel.md)
- [HTTP_CODE](enumerations/HTTP_CODE.md)
- [Imagenet1kLabel](enumerations/Imagenet1kLabel.md)
- [ScalarType](enumerations/ScalarType.md)
- [SelfieSegmentationLabel](enumerations/SelfieSegmentationLabel.md)
- [SourceType](enumerations/SourceType.md)
- [Bbox](interfaces/Bbox.md)
- [ChatConfig](interfaces/ChatConfig.md)
- [ClassificationProps](interfaces/ClassificationProps.md)
- [ClassificationType](interfaces/ClassificationType.md)
- [ContextStrategy](interfaces/ContextStrategy.md)
- [DecodingOptions](interfaces/DecodingOptions.md)
- [Detection](interfaces/Detection.md)
- [ExecutorchModuleProps](interfaces/ExecutorchModuleProps.md)
- [ExecutorchModuleType](interfaces/ExecutorchModuleType.md)
- [GenerationConfig](interfaces/GenerationConfig.md)
- [ImageEmbeddingsProps](interfaces/ImageEmbeddingsProps.md)
- [ImageEmbeddingsType](interfaces/ImageEmbeddingsType.md)
- [InstanceSegmentationOptions](interfaces/InstanceSegmentationOptions.md)
- [InstanceSegmentationProps](interfaces/InstanceSegmentationProps.md)
- [InstanceSegmentationType](interfaces/InstanceSegmentationType.md)
- [Keypoint](interfaces/Keypoint.md)
- [LLMConfig](interfaces/LLMConfig.md)
- [LLMProps](interfaces/LLMProps.md)
- [LLMType](interfaces/LLMType.md)
- [LLMTypeBase](interfaces/LLMTypeBase.md)
- [LLMTypeMultimodal](interfaces/LLMTypeMultimodal.md)
- [Message](interfaces/Message.md)
- [ObjectDetectionOptions](interfaces/ObjectDetectionOptions.md)
- [ObjectDetectionProps](interfaces/ObjectDetectionProps.md)
- [ObjectDetectionType](interfaces/ObjectDetectionType.md)
- [OCRDetection](interfaces/OCRDetection.md)
- [OCRProps](interfaces/OCRProps.md)
- [OCRType](interfaces/OCRType.md)
- [PiiEntity](interfaces/PiiEntity.md)
- [PixelData](interfaces/PixelData.md)
- [PoseEstimationOptions](interfaces/PoseEstimationOptions.md)
- [PoseEstimationProps](interfaces/PoseEstimationProps.md)
- [PoseEstimationType](interfaces/PoseEstimationType.md)
- [PrivacyFilterModelSources](interfaces/PrivacyFilterModelSources.md)
- [PrivacyFilterProps](interfaces/PrivacyFilterProps.md)
- [PrivacyFilterType](interfaces/PrivacyFilterType.md)
- [Segment](interfaces/Segment.md)
- [SegmentedInstance](interfaces/SegmentedInstance.md)
- [SemanticSegmentationProps](interfaces/SemanticSegmentationProps.md)
- [SemanticSegmentationType](interfaces/SemanticSegmentationType.md)
- [SpeechToTextModelConfig](interfaces/SpeechToTextModelConfig.md)
- [SpeechToTextProps](interfaces/SpeechToTextProps.md)
- [SpeechToTextType](interfaces/SpeechToTextType.md)
- [StreamingOptions](interfaces/StreamingOptions.md)
- [StyleTransferProps](interfaces/StyleTransferProps.md)
- [StyleTransferType](interfaces/StyleTransferType.md)
- [TensorPtr](interfaces/TensorPtr.md)
- [TextEmbeddingsProps](interfaces/TextEmbeddingsProps.md)
- [TextEmbeddingsType](interfaces/TextEmbeddingsType.md)
- [TextToImageProps](interfaces/TextToImageProps.md)
- [TextToImageType](interfaces/TextToImageType.md)
- [TextToSpeechInput](interfaces/TextToSpeechInput.md)
- [TextToSpeechModelConfig](interfaces/TextToSpeechModelConfig.md)
- [TextToSpeechPhonemizerConfig](interfaces/TextToSpeechPhonemizerConfig.md)
- [TextToSpeechStreamingCallbacks](interfaces/TextToSpeechStreamingCallbacks.md)
- [TextToSpeechStreamingInput](interfaces/TextToSpeechStreamingInput.md)
- [TextToSpeechType](interfaces/TextToSpeechType.md)
- [TokenizerProps](interfaces/TokenizerProps.md)
- [TokenizerType](interfaces/TokenizerType.md)
- [ToolCall](interfaces/ToolCall.md)
- [ToolsConfig](interfaces/ToolsConfig.md)
- [TranscriptionResult](interfaces/TranscriptionResult.md)
- [TranscriptionSegment](interfaces/TranscriptionSegment.md)
- [VADConfig](interfaces/VADConfig.md)
- [VADProps](interfaces/VADProps.md)
- [VADStreamingInput](interfaces/VADStreamingInput.md)
- [VADStreamingOptions](interfaces/VADStreamingOptions.md)
- [VADType](interfaces/VADType.md)
- [VerticalOCRProps](interfaces/VerticalOCRProps.md)
- [ViterbiBiases](interfaces/ViterbiBiases.md)
- [Word](interfaces/Word.md)
- [ClassificationConfig](type-aliases/ClassificationConfig.md)
- [ClassificationLabels](type-aliases/ClassificationLabels.md)
- [ClassificationModelName](type-aliases/ClassificationModelName.md)
- [ClassificationModelSources](type-aliases/ClassificationModelSources.md)
- [ImageEmbeddingsModelName](type-aliases/ImageEmbeddingsModelName.md)
- [InstanceModelNameOf](type-aliases/InstanceModelNameOf.md)
- [InstanceSegmentationConfig](type-aliases/InstanceSegmentationConfig.md)
- [InstanceSegmentationLabels](type-aliases/InstanceSegmentationLabels.md)
- [InstanceSegmentationModelName](type-aliases/InstanceSegmentationModelName.md)
- [InstanceSegmentationModelSources](type-aliases/InstanceSegmentationModelSources.md)
- [LabelEnum](type-aliases/LabelEnum.md)
- [LLMCapability](type-aliases/LLMCapability.md)
- [LLMModelName](type-aliases/LLMModelName.md)
- [LLMTool](type-aliases/LLMTool.md)
- [MediaArg](type-aliases/MediaArg.md)
- [MessageRole](type-aliases/MessageRole.md)
- [ModelNameOf](type-aliases/ModelNameOf.md)
- [ObjectDetectionConfig](type-aliases/ObjectDetectionConfig.md)
- [ObjectDetectionLabels](type-aliases/ObjectDetectionLabels.md)
- [ObjectDetectionModelName](type-aliases/ObjectDetectionModelName.md)
- [ObjectDetectionModelSources](type-aliases/ObjectDetectionModelSources.md)
- [OCRLanguage](type-aliases/OCRLanguage.md)
- [OCRModelName](type-aliases/OCRModelName.md)
- [PersonKeypoints](type-aliases/PersonKeypoints.md)
- [PoseDetections](type-aliases/PoseDetections.md)
- [PoseEstimationConfig](type-aliases/PoseEstimationConfig.md)
- [PoseEstimationKeypoints](type-aliases/PoseEstimationKeypoints.md)
- [PoseEstimationModelName](type-aliases/PoseEstimationModelName.md)
- [PoseEstimationModelSources](type-aliases/PoseEstimationModelSources.md)
- [PrivacyFilterModelName](type-aliases/PrivacyFilterModelName.md)
- [ResourceSource](type-aliases/ResourceSource.md)
- [SegmentationLabels](type-aliases/SegmentationLabels.md)
- [SemanticSegmentationConfig](type-aliases/SemanticSegmentationConfig.md)
- [SemanticSegmentationModelName](type-aliases/SemanticSegmentationModelName.md)
- [SemanticSegmentationModelSources](type-aliases/SemanticSegmentationModelSources.md)
- [SpeechToTextLanguage](type-aliases/SpeechToTextLanguage.md)
- [SpeechToTextModelName](type-aliases/SpeechToTextModelName.md)
- [StyleTransferModelName](type-aliases/StyleTransferModelName.md)
- [TensorBuffer](type-aliases/TensorBuffer.md)
- [TextEmbeddingsModelName](type-aliases/TextEmbeddingsModelName.md)
- [TextToImageModelName](type-aliases/TextToImageModelName.md)
- [TextToSpeechLanguage](type-aliases/TextToSpeechLanguage.md)
- [TextToSpeechModelName](type-aliases/TextToSpeechModelName.md)
- [TextToSpeechModelSources](type-aliases/TextToSpeechModelSources.md)
- [Triple](type-aliases/Triple.md)
- [VADModelName](type-aliases/VADModelName.md)
- [SPECIAL_TOKENS](variables/SPECIAL_TOKENS.md)

## Typescript API

- [ClassificationModule](classes/ClassificationModule.md)
- [ExecutorchModule](classes/ExecutorchModule.md)
- [ImageEmbeddingsModule](classes/ImageEmbeddingsModule.md)
- [InstanceSegmentationModule](classes/InstanceSegmentationModule.md)
- [LLMModule](classes/LLMModule.md)
- [ObjectDetectionModule](classes/ObjectDetectionModule.md)
- [OCRModule](classes/OCRModule.md)
- [PoseEstimationModule](classes/PoseEstimationModule.md)
- [PrivacyFilterModule](classes/PrivacyFilterModule.md)
- [SemanticSegmentationModule](classes/SemanticSegmentationModule.md)
- [SpeechToTextModule](classes/SpeechToTextModule.md)
- [StyleTransferModule](classes/StyleTransferModule.md)
- [TextEmbeddingsModule](classes/TextEmbeddingsModule.md)
- [TextToImageModule](classes/TextToImageModule.md)
- [TextToSpeechModule](classes/TextToSpeechModule.md)
- [TokenizerModule](classes/TokenizerModule.md)
- [VADModule](classes/VADModule.md)
- [VerticalOCRModule](classes/VerticalOCRModule.md)

## Utilities - General

- [ResourceFetcherUtils](react-native-executorch/namespaces/ResourceFetcherUtils/index.md)
- [ResourceFetcher](classes/ResourceFetcher.md)
- [ExecutorchConfig](interfaces/ExecutorchConfig.md)
- [ResourceFetcherAdapter](interfaces/ResourceFetcherAdapter.md)
- [isAvailable](variables/isAvailable.md)
- [cleanupExecutorch](functions/cleanupExecutorch.md)
- [initExecutorch](functions/initExecutorch.md)

## Utilities - LLM

- [DEFAULT_CHAT_CONFIG](variables/DEFAULT_CHAT_CONFIG.md)
- [DEFAULT_CONTEXT_BUFFER_TOKENS](variables/DEFAULT_CONTEXT_BUFFER_TOKENS.md)
- [DEFAULT_MESSAGE_HISTORY](variables/DEFAULT_MESSAGE_HISTORY.md)
- [DEFAULT_SYSTEM_PROMPT](variables/DEFAULT_SYSTEM_PROMPT.md)
- [parseToolCall](variables/parseToolCall.md)
- [DEFAULT_STRUCTURED_OUTPUT_PROMPT](functions/DEFAULT_STRUCTURED_OUTPUT_PROMPT.md)
- [fixAndValidateStructuredOutput](functions/fixAndValidateStructuredOutput.md)
- [getStructuredOutputPrompt](functions/getStructuredOutputPrompt.md)

## Utils

- [MessageCountContextStrategy](classes/MessageCountContextStrategy.md)
- [NoopContextStrategy](classes/NoopContextStrategy.md)
- [SlidingWindowContextStrategy](classes/SlidingWindowContextStrategy.md)
- [Backend](type-aliases/Backend.md)
- [ModelOpts](type-aliases/ModelOpts.md)
- [models](variables/models.md)
